--- a/teachbot_ros/config/target_robots/ur.yaml
+++ b/teachbot_ros/config/target_robots/ur.yaml
@@ -24,5 +24,41 @@ teachbot_publisher:
       - 0.0     # wrist_1
       - 0.0     # wrist_2
       - 0.0     # wrist_3
+
+jointstate_remapper_to_target_robot:
+  ros__parameters:
+    target_robot_name: "ur"
+    target_joint_names:
+      - "shoulder_pan_joint"
+      - "shoulder_lift_joint"
+      - "elbow_joint"
+      - "wrist_1_joint"
+      - "wrist_2_joint"
+      - "wrist_3_joint"
+    target_degree_offsets:
+      - -90.0     # shoulder_pan
+      - 0.0       # shoulder_lift
+      - 0.0       # elbow
+      - 0.0       # wrist_1
+      - 0.0       # wrist_2
+      - 0.0       # wrist_3
+
+joint_state_remapper:
+  ros__parameters:
+    target_robot_name: "ur"
+    target_joint_names:
+      - "shoulder_pan_joint"
+      - "shoulder_lift_joint"
+      - "elbow_joint"
+      - "wrist_1_joint"
+      - "wrist_2_joint"
+      - "wrist_3_joint"
+    target_degree_offsets:
+      - -90.0     # shoulder_pan
+      - 0.0       # shoulder_lift
+      - 0.0       # elbow
+      - 0.0       # wrist_1
+      - 0.0       # wrist_2
+      - 0.0       # wrist_3
     
   
