--- a/teachbot_follower/config/ufLite6.yaml
+++ b/teachbot_follower/config/ufLite6.yaml
@@ -4,8 +4,10 @@ teachbot_follower_action:
     teachbot_topic: '/teachbot/ufLite6/joint_states'
     enable_topic: '/teachbot/enable'
     
-    # Controller configuration
+    # Controller configuration of target robot
     controller_name: 'lite6_traj_controller'
+    # Controller configuration for simulation of target robot
+    controller_name_sim: 'lite6_traj_controller'
     
     # Motion parameters
     update_rate: 0.5              # seconds between updates
