--- a/teachbot_follower/config/ufLite6.yaml
+++ b/teachbot_follower/config/ufLite6.yaml
@@ -1,7 +1,7 @@
 teachbot_follower_action:
   ros__parameters:
     # Topic configuration
-    teachbot_topic: '/teachbot/ufLite6/joint_states'
+    teachbot_topic: '/teachbot/joint_states'
     enable_topic: '/teachbot/enable'
     
     # Controller configuration of target robot
@@ -13,3 +13,28 @@ teachbot_follower_action:
     update_rate: 0.5              # seconds between updates
     position_tolerance: 0.01      # radians - minimum change to trigger update
     trajectory_duration: 2.0      # seconds - duration for trajectory execution
+
+    target_joint_names:
+      - "joint1"
+      - "joint2"
+      - "joint3"
+      - "joint4"
+      - "joint5"
+      - "joint6"
+
+    target_degree_offsets:
+      - 0.0     # joint1
+      - 0.0    # joint2
+      - 0.0     # joint3
+      - 0.0    # joint4
+      - 0.0   # joint5
+      - 0.0     # joint6
+    
+    # Joint scale factors (use -1.0 to invert direction)
+    joint_scale_factors:
+      - 1.0     # joint1
+      - 1.0     # joint2
+      - 1.0     # joint3
+      - 1.0     # joint4
+      - 1.0     # joint5
+      - 1.0     # joint6
