--- a/teachbot_follower/config/ufLite6.yaml
+++ b/teachbot_follower/config/ufLite6.yaml
@@ -14,6 +14,14 @@ teachbot_follower_action:
     position_tolerance: 0.01      # radians - minimum change to trigger update
     trajectory_duration: 2.0      # seconds - duration for trajectory execution
 
+    source_joint_names:
+      - "shoulder_pan_joint"
+      - "shoulder_lift_joint"
+      - "elbow_joint"
+      - "wrist_1_joint"
+      - "wrist_2_joint"
+      - "wrist_3_joint"
+
     target_joint_names:
       - "joint1"
       - "joint2"
