--- a/teachbot_follower/config/ufLite6.yaml
+++ b/teachbot_follower/config/ufLite6.yaml
@@ -1,4 +1,4 @@
-teachbot_follower_action:
+teachbot_follower:
   ros__parameters:
     # Topic configuration
     teachbot_topic: '/teachbot/joint_states'
