--- a/teachbot_interfaces/CMakeLists.txt
+++ b/teachbot_interfaces/CMakeLists.txt
@@ -14,6 +14,7 @@ find_package(rosidl_default_generators REQUIRED)
 
 # Generate custom messages
 rosidl_generate_interfaces(${PROJECT_NAME}
+  "msg/TeachbotPistol.msg"
   "msg/TeachbotState.msg"
   DEPENDENCIES std_msgs geometry_msgs builtin_interfaces
 )
