--- a/teachbot_ros/package.xml
+++ b/teachbot_ros/package.xml
@@ -16,6 +16,7 @@
   <!-- For RViz visualization -->
   <exec_depend>robot_state_publisher</exec_depend>
   <exec_depend>rviz2</exec_depend>
+  <exec_depend>my_robot_description</exec_depend>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
