--- a/teachbot_recorder/config/ur.yaml
+++ b/teachbot_recorder/config/ur.yaml
@@ -1,4 +1,4 @@
-teachbot_recorder:
+teachbot_recorder_gui:
   ros__parameters:
     # Topic configuration
     robot_joint_topic: '/joint_states'
@@ -7,7 +7,7 @@ teachbot_recorder:
     pistol_topic: '/teachbot/pistol_state'
 
     # Recording parameters  
-    recording_rate: 100.0        # Hz - how often to record joint states
+    recording_rate: 5.0        # Hz - how often to record joint states
     record_pistol: True          # Whether to record pistol state (buttons and potentiometer)
 
     # Controller configuration of target robot
